{
  "title": "books",
  "theme": "Theme",
  "light": "Light",
  "dark": "Dark",
  "follow": "Automatic",
  "language": "Language",
  "lang_english": "English",
  "lang_chinese": "Chinese",
  "menu_setting": "setting",
  "menu_me": "own",
  "exitApp": "Press again to exit",
  "settingPage_logOutButton_title": "Logout",
  "settingPage_logOutButton_text": "Click to log out",
  "settingPage_logOutButton_dialogText": "Are you sure you want to log out?",
  "loginForm_loginButton_text": "Login",
  "loginForm_registerButton_text": "Register",
  "loginForm_otherLoginButton_text": "Other Login",
  "loginForm_emailInput_title": "Email",
  "loginForm_emailInput_pleaseEnterEmail": "please enter a email",
  "loginForm_emailInput_invalidEmail": "invalid email",
  "loginForm_passwordInput_title": "Password",
  "loginForm_passwordInput_pleaseEnterPassword": "please enter a password",
  "loginForm_passwordInput_invalidPassword": "invalid password",
  "loginForm_errorMessage_authenticationFailure": "Authentication Failure"
}
